--- a/Nginx/www/index-slave.html
+++ b/Nginx/www/index-slave.html
@@ -1,1 +1,33 @@
-<h1>slave！</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>从机</title>
+<style>
+
+#box{ 
+    margin: 0px auto;
+    font-family: 'Times New Roman', Times, serif; 
+    font-size: 30px;
+    font-style: initial;
+    color: aliceblue;
+    }
+
+body{
+    background-color: black
+}
+
+</style>
+</head>
+<body>
+
+    <div id="box">
+
+        从机
+
+    </div>
+    
+</body>
+</html>
